--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,8 +1,9 @@
 @import "themes/mocha.css";
 
 * {
-  color: @text;
-  background: transparent;
+  background-color: @base;
+  color: @rosewater;
+
   border: none;
   border-radius: 0;
   min-height: 0;
@@ -16,7 +17,7 @@ window#waybar {
   border-bottom: 1px solid alpha(@crust, 0.3);
 }
 
-window#waybar.hidden {
+.hidden {
   opacity: 0;
 }
 
@@ -61,6 +62,10 @@ window#waybar.hidden {
   background-color: #313244; /* surface0 */
 }
 
+#bluetooth {
+  margin-right: 16px;
+}
+
 #network { margin-right: 13px; }
 #custom-expand-icon { margin-right: 20px; }
 #clock { margin-left: 8.75px; }
@@ -71,12 +76,3 @@ tooltip {
   color: @text;
   border: 1px solid alpha(@crust, 0.3);
 }
-
-/* SCREENREC */
-#custom-screenrecording-indicator {
-  min-width: 12px;
-  margin-left: 8.75px;
-  font-size: 10px;
-}
-#custom-screenrecording-indicator.active { color: #a55555; }
-
