--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,9 +1,6 @@
-@import "themes/mocha.css";
+@import "themes/gruvbox_light.css";
 
 * {
-  background-color: @base;
-  color: @rosewater;
-
   border: none;
   border-radius: 0;
   min-height: 0;
@@ -12,10 +9,11 @@
 }
 
 window#waybar {
-  background-color: alpha(@base, 0.92);
-  color: @text;
-  border-bottom: 1px solid alpha(@crust, 0.3);
+  background-color: alpha(@bg, 0.92);
+  color: @fg;
+  border-bottom: 1px solid alpha(@bg4, 0.3);
 }
+
 
 .hidden {
   opacity: 0;
@@ -29,50 +27,50 @@ window#waybar {
   padding: 0 6px;
   margin: 0 1.5px;
   min-width: 9px;
-  color: @subtext1;
+  color: @fg;
   background: transparent;
 }
 
 #workspaces button.active {
-  color: @text;
-  background-color: alpha(@surface0, 0.6);
+  color: @fg;
+  background-color: @bg2;
   border-radius: 6px;
 }
 
 #workspaces button:hover {
-  background-color: alpha(@surface1, 0.7);
-  color: @text;
+  background-color: @bg1;
+  color: @fg;
 }
 
 #workspaces button.empty { opacity: 0.5; }
 
 #cpu,
 #battery,
+#upower,
 #pulseaudio,
 #custom-screenrecording-indicator,
 #tray { margin-right: 16px; }
 
 #tray menu {
-  background-color: #1e1e2e; /* Catppuccin Mocha base */
-  border: 1px solid #313244; /* surface0 */
-  color: #cdd6f4;            /* text */
+  background-color: @bg1;
+  border: 1px solid @bg2;
+  color: @fg;
 }
 
 #tray menu *:hover {
-  background-color: #313244; /* surface0 */
+  background-color: @bg2;
 }
 
 #bluetooth {
   margin-right: 16px;
 }
 
-#network { margin-right: 13px; }
 #custom-expand-icon { margin-right: 20px; }
 #clock { margin-left: 8.75px; }
 
 tooltip {
   padding: 2px;
-  background-color: @surface0;
-  color: @text;
+  background-color: @bg1;
+  color: @fg;
   border: 1px solid alpha(@crust, 0.3);
 }
